Ingredients List Complete

--- a/recipies/crinklecookies.html
+++ b/recipies/crinklecookies.html
@@ -23,7 +23,24 @@
 
         <!-- I used heading 3! for the description-->
 
-        
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>Butter</li>
+        <li>Eggs</li>
+        <li>Lemons</li>
+        <li>Salt</li>
+        <li>Baking Powder</li>
+        <li>Baking Soda</li>
+        <li>Flour</li>
+        <li>Sugar</li>
+        <li>Powdered Sugar</li>
+        <li>Vanilla Extract</li>
+        <li>Lemon extract</li>
+    </ul>
+    
+
+
 
 </body>
 </html>
