Updates "Ingredients" list with measurements

--- a/recipies/crinklecookies.html
+++ b/recipies/crinklecookies.html
@@ -26,19 +26,24 @@
     <h3>Ingredients</h3>
 
     <ul>
-        <li>Butter</li>
-        <li>Eggs</li>
-        <li>Lemons</li>
-        <li>Salt</li>
-        <li>Baking Powder</li>
-        <li>Baking Soda</li>
-        <li>Flour</li>
-        <li>Sugar</li>
-        <li>Powdered Sugar</li>
-        <li>Vanilla Extract</li>
-        <li>Lemon extract</li>
+        <li>1/2 cup butter, Softened</li>
+        <li>1 egg</li>
+        <li>1 tablespoon lemon zest</li>
+        <li>1/4 teaspoon salt</li>
+        <li>1/4 teaspoon baking powder</li>
+        <li>1/4 teaspoon baking soda</li>
+        <li>1 1/2 cups all-purpose flour</li>
+        <li>1 cup granulated sugar</li>
+        <li>1/2 cup powdered sugar</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>1 teaspoon lemon extract</li>
     </ul>
+
+    <h3>Steps</h3>
     
+    <ol>
+        <li>
+
 
 
 
