--- a/recipies/crinklecookies.html
+++ b/recipies/crinklecookies.html
@@ -42,7 +42,22 @@
     <h3>Steps</h3>
     
     <ol>
-        <li>
+        <li>Preheat oven to 350F.</li>
+        <li> In the bowl of a stand mixer, cream butter and sugar together until light and fluffy.
+        Mix in vanilla, lemon extract, egg, lemon zest, and lemon juice. Scrape sides and mix again.</li>
+        <li>In a medium sized mixing bowl, whisk together the flour, baking powder, baking soda and salt. </li>
+        <li>With standmixer on medium-low speed, gradually add the flour mixture. Beat until just combined.</li>
+        <li>Refrigerate dough for at least one hour, or overnight.</li>
+        <li>Pour powdered sugar onto a bowl/plate. 
+        <li>Roll a heaping tablespoon of dough into a ball then roll in powdered sugar until well coated.</li>
+        <li>Place on lined baking sheet and repeat with remaining dough, keeping the alls of dough two inches apart on baking sheet.</li>
+        <li>Bake for 9-11 Minutes or until cookies are cracked on top.</li>
+        <li>Remove from oven and let cookies sit for about three minutes before 
+        transferring to a cooling rack. <strong><em>ENJOY!</em></strong></li>
+    <ol>
+        
+
+
 
 
 
