Brownies Recipes Page link added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipies/crinklecookies.html">Lemon Crinkle Cookies</a>
+
+    <p><a href="./recipies/crinklecookies.html">Lemon Crinkle Cookies</a></p>
+
+    <p><a href="./recipies/brownies.html">Brownies</a></p>
+
 </body>
 </html>
