--- a/recipies/brownies.html
+++ b/recipies/brownies.html
@@ -19,11 +19,15 @@
         fudgy, and gooey with a perfectly cracked top and loaded with chocolate chips. These homemade brownies 
         are super easy and truly irresistible you'll never reach for that box mix again!</p>
 
-        <p>     When you need a perfectly sweet chocolate fix that comes together in just a few minutes homemade 
-            brownies cannot be beaten! This truly is the best brownie recipe ever, they’re fudgy, gooey, 
-            intensely chocolatey, and irresistibly delicious. Better yet, they are just as easy as any box mix 
-            recipe but they taste 10x better than those brownie mixes.</p>
+ <p> When you need a perfectly sweet chocolate fix that comes together in just a few minutes homemade 
+    brownies cannot be beaten! This truly is the best brownie recipe ever, they’re fudgy, gooey, 
+    intensely chocolatey, and irresistibly delicious. Better yet, they are just as easy as any box mix 
+    recipe but they taste 10x better than those brownie mixes.</p>
 
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>
     
 </body>
 </html>
