Brownies Ingredient list complete

--- a/recipies/brownies.html
+++ b/recipies/brownies.html
@@ -26,8 +26,23 @@
 
     <h3>Ingredients</h3>
 
-    <ul>
-        <li>
+    <ul> 
+        <li>1 cup granulated sugar (200g)</li>
+        <li> 1 cup brown sugar (200g), lightly packed</li>
+        <li>3 eggs room temperature</li>
+        <li>3/4 cup cocoa powder (75g)</li>
+        <li>1 cup flour (120g)</li>
+        <li>1 teaspoon salt (6g)</li>
+        <li>1.5 cup dark chocolate chips (260g)</li>
+        <li>1 cup melted butter (225g), unsalted
+        <li>1 tbsp coffee (15mL)</li>
+        <li>1 tbsp vanilla extract (15mL)</li>
+    </ul>
+
+    
+
+
+
     
 </body>
 </html>
