Link update for buffalo chicken dip

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 
     <p><a href="./recipies/brownies.html">Brownies</a></p>
 
+    <p><a href="./recipies/buffalochickendip.html">Buffalo Chicken Dip</a></p>
+    
+
 </body>
 </html>
