Added "Return To Top" and "Return To Home Page"

--- a/recipies/brownies.html
+++ b/recipies/brownies.html
@@ -52,7 +52,11 @@
         <li>Toss in chocolate chips (or chunks) and fold into the batter.</li>
         <li>Add batter to pan and smooth to the edges. You can add more chocolate chips to the top before baking if desired.</li>
         <li>Bake for about 30 minutes or until the center is just set. You'll notice the center does not wiggle when the pan is moved.</li>
+    </ol>
 
+    <p><a href="brownies.html">Return To Top</a></p> 
  
+    <a href="file:///home/nyx/odin_recipes/index.html">Return To Home Page</a>
+
 </body>
 </html>
