--- a/recipies/buffalochickendip.html
+++ b/recipies/buffalochickendip.html
@@ -44,6 +44,11 @@
         <li>Bake until mixture is bubbling, about 25 to 30 minutes.</li>
         <li>Let dip cool for at least 15 minutes before serving. Sprinkle with remaining green onion just before serving. Serve with celery sticks and tortilla chips.</li>
     </ol>
+
+    <p><a href="buffalochickendip.html">Return To Top</a></p>
+
+    <a href="file:///home/nyx/odin_recipes/index.html">Return To Home Page</a>
+
     
 </body>
 </html>
