--- a/recipies/crinklecookies.html
+++ b/recipies/crinklecookies.html
@@ -55,6 +55,10 @@
         <li>Remove from oven and let cookies sit for about three minutes before 
         transferring to a cooling rack. <strong><em>ENJOY!</em></strong></li>
     <ol>
+        
+        <p><a href="crinklecookies.html">Return To Top</a></p>
+
+        <a href="file:///home/nyx/odin_recipes/index.html">Return To Home Page</a>
 
 </body>
 </html>
